hopefully fixed contact page on mobile

--- a/app/assets/stylesheets/pages/contact.css
+++ b/app/assets/stylesheets/pages/contact.css
@@ -1,6 +1,6 @@
 .contact-container {
-  padding: 70px 20px;
-  height: 92vh;
+  padding: 100px 20px;
+  /* height: 92vh; */
   box-sizing: border-box;
   width: 100%;
   display: flex;
